# awranalyzor

./: .coverage  .env.production  .gitignore  db.sqlite3  debug_awr_validation.py  debug_comprehensive_fix.py  debug_factory.py  debug_factory_issue.py  debug_parser_factory.py  debug_test_issue.py  debug_version_detection.py  debug_version_issue.py  docker-compose.production.yml  docker-compose.yml  env.example  env.production.example  pyproject.toml  requirements-test-only.txt  requirements-test.txt  requirements.txt  test_api_debug.py  test_api_fix_verification.py  test_delete_functionality.py  test_fixes_verification.py  test_in_container.py  test_p2_ld_005_integration.py  test_service_direct.py  test_simple_debug.py  test_upload_validation.py  test_validation_direct.py  verification_results.json
accounts/: urls.py
apps/awr_parser/: .coverage
awr_parser/: urls.py
awr_upload/: models.py  services.py  urls.py  views.py
awr_upload/tests/: test_integration.py
awranalyzor/: asgi.py  models.py  urls.py
awranalyzor/settings/: __init__.py  production.py
backend/: Dockerfile  manage.py  requirements.txt
backend/accounts/: models.py
backend/awr_parser/: apps.py  tasks.py
backend/awr_upload/: apps.py  services.py  tasks.py  urls.py  views.py
backend/awranalyzor/: __init__.py  celery_app.py  settings.py  urls.py  views.py  wsgi.py
backend/comparisons/: models.py  urls.py
backend/exports/: urls.py
backend/performance/: models.py  tasks.py  urls.py
backend/reports/: urls.py
comparisons/migrations/: 0001_initial.py
diagnostics/: models.py  urls.py
docs/: deployment.md
exports/: models.py
exports/migrations/: 0001_initial.py
frontend/: Dockerfile  default.conf  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  setupTests.ts
nginx/: nginx_lb.conf  ssl.conf
project_document/: analysis.md  awr_analyzer_ui_fixes_summary.md  awr_ui_interaction_fix_task.md  awrapi_fix_解析结果显示修复.md  bugfix_upload_validation.md  docker_build_fixes.md  file_deletion_and_operations_guide.md  milestone5_production_deployment.md  plan.md  production_test_report.md  proposals.md  system_verification_report.md
project_document/architecture/: business_architecture.md  code_architecture_final.md  (+1 more)
requirements/: base.txt
scripts/: deploy.sh  deploy_production.sh  generate_ssl_cert.sh  manage.sh  production_management.sh  stress_test.sh
ssl_certs/: dhparam.pem  fullchain.pem  privkey.pem
test_results/: stress_test_report_20250611_111533.txt
tests/: conftest.py  factories.py  test_basic.py  test_utils.py
(+66 files in other folders)
